# layered-memory-mcp

./: .gitignore  ARCHITECTURE_v2.md  CHANGELOG.md  KNOWLEDGE_AUDIT_2026-05-12.md  LICENSE  MANIFEST.in  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README_v2.md  RELEASE_v2.0.0.md  pyproject.toml
config/: config.example.yaml
examples/: README.md  development.md  domain_rules.example.yaml  infrastructure.md  memory_compact_cron.py  retry_daemon.py
scripts/: rebuild_vectors.py
src/layered_memory_mcp/: __init__.py  agent_integrator.py  cache.py  config.py  injector.py  l0_manager.py  memory_compactor.py  migrate.py  models.py  promotion.py  ranking.py  recall.py  rot_auditor.py  server.py  session_scanner.py  todo_store.py  watcher.py
src/layered_memory_mcp/api/: __init__.py  server.py
src/layered_memory_mcp/dashboard_plugin/: __init__.py  manifest.json  plugin_api.py
src/layered_memory_mcp/extractor/: __init__.py  confidence.py  knowledge_extractor.py  session_reader.py
src/layered_memory_mcp/storage/: __init__.py  access_log.py  frontmatter.py  l1_store.py  review_queue.py  vector_store.py
tests/: test_cache.py  test_core.py  test_dashboard_plugin.py  test_ranking.py  test_v050.py  test_v080.py  test_v200.py  test_v2100_promotion.py  test_v2110.py  test_v230.py  test_v240.py  test_v280_antibloat.py  test_v293_writepath_consistency.py
